<resources>
  <string name="app_name">Eqonomize!</string>
  <string name="action_settings">Settings</string>

  <string name="menu_drawer_statistics_group">Statistics</string>
  <string name="menu_drawer_statistics_option1">Statistics</string>

  <string name="menu_drawer_management_group">Management</string>
  <string name="menu_drawer_management_overview">Overview</string>
  <string name="menu_drawer_management_expenses">Expenses</string>
  <string name="menu_drawer_management_incomes">Incomes</string>
  <string name="menu_drawer_management_transfers">Transfers</string>

  <string name="menu_drawer_configuration_group">Configuration</string>
  <string name="menu_drawer_configuration_accounts">Accounts</string>
  <string name="menu_drawer_configuration_securities">Securities</string>
  <string name="menu_drawer_configuration_schedule">Schedules</string>

  <string name="menu_drawer_settings_group">Settings</string>
  <string name="menu_drawer_settings_categories">Categories</string>
  <string name="menu_drawer_settings_openfile">Open or create file</string>

  <string name="menu_drawer_help_group">Help</string>
  <string name="menu_drawer_help_about">About</string>
  <string name="menu_drawer_help_help">Help</string>
  <string name="menu_drawer_help_bug">Report a bug or feature</string>

  <string name="menu_new_income">New income</string>
  <string name="menu_new_expense">New expense</string>
  <string name="menu_new_transfer">New transfer</string>
  <string name="menu_edit">Edit</string>
  <string name="menu_delete">Delete</string>

  <string name="eqonomizefile_activity_b_select_file">Select file  &#8230;</string>
  <string name="eqonomizefile_activity_b_create_file">Create new file &#8230;</string>
  <string name="eqonomizefile_activity_tv_header">Last opened files:</string>
  <string name="eqonomizefile_activity_dialog_alert">Warning</string>
  <string name="eqonomizefile_activity_dialog_alert_file">Please add the extension \".eqz\" to the filename.</string>
  <string name="eqonomizefile_activity_dialog_error">Error</string>
  <string name="eqonomizefile_activity_dialog_error_file">Selected file is not an Eqonomize database file.</string>
  <string name="permission_title">Write permission</string>
  <string name="permission_message">Please allow the application to read and write to external storage.</string>
  <string name="title_activity_bottom_navigation">Eqonomize!</string>
  <string name="title_home">Home</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>

</resources>
