<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".fragments.EqonomizeFileFragment">

  <Button
    android:id="@+id/file_activity_b_select_file"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:backgroundTint="@color/colorPrimary"
    android:gravity="start|center_vertical"
    android:text="@string/eqonomizefile_activity_b_select_file"
    android:textColor="@color/colorWhite"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <Button
    android:id="@+id/file_activity_b_create_file"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:backgroundTint="@color/colorPrimary"
    android:gravity="start|center_vertical"
    android:text="@string/eqonomizefile_activity_b_create_file"
    android:textColor="@color/colorWhite"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/file_activity_b_select_file"/>

  <TextView
    android:id="@+id/file_activity_tv_list_header"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:text="@string/eqonomizefile_activity_tv_header"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    android:textColor="@color/colorBlack"

    app:layout_constraintBottom_toBottomOf="@+id/file_activity_v_divider"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="@+id/file_activity_v_divider"
    app:layout_constraintTop_toBottomOf="@+id/file_activity_b_create_file"/>

  <View
    android:id="@+id/file_activity_v_divider"
    android:layout_width="0dp"
    android:layout_height="1dp"
    android:background="@color/colorGrey"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/file_activity_tv_list_header"/>

  <ListView
    android:id="@+id/file_activity_lv_files"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_margin="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/file_activity_v_divider"/>
</androidx.constraintlayout.widget.ConstraintLayout>